Updated readme and config.json
* readme now explains the structure of the directories.
* config.json now lists the exercises in an order similar to Elixir.

--- a/config.json
+++ b/config.json
@@ -4,7 +4,19 @@
   "repository": "https://github.com/exercism/xerlang",
   "active": false,
   "problems": [
-
+      "bob",
+      "word-count",
+      "accumulate",
+      "anagram",
+      "beer-song",
+      "nucleotide-count",
+      "rna-transcription",
+      "point-mutations",
+      "phone-number",
+      "etl",
+      "allergies",
+      "trinary",
+      "luhn"
   ],
   "deprecated": [
 
