Add binary exercise

--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
     "nucleotide-count",
     "phone-number",
     "grade-school",
+    "binary",
     "word-count",
     "etl",
     "gigasecond",
