Run tests with escript
Using escript to run tests is faster (1 second instead of 30).

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
 script:
   - bin/fetch-configlet
   - bin/configlet .
-  - './_test/check-exercises.sh'
+  - './_test/check-exercises.escript'
 cache:
   - apt
