Add atbash-cipher exercise

--- a/config.json
+++ b/config.json
@@ -15,6 +15,7 @@
     "grains",
     "anagram",
     "nucleotide-count",
+    "atbash-cipher",
     "phone-number",
     "grade-school",
     "word-count",
