Add robot-simulator exercise

--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
     "anagram",
     "nucleotide-count",
     "phone-number",
+    "robot-simulator",
     "grade-school",
     "word-count",
     "etl",
