--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
     "rna-transcription",
     "accumulate",
     "bob",
+    "sum-of-multiples",	
     "point-mutations",
     "anagram",
     "nucleotide-count",
