Solution for space age.

--- a/config.json
+++ b/config.json
@@ -8,9 +8,10 @@
     "rna-transcription",
     "accumulate",
     "bob",
-    "sum-of-multiples",	
+    "sum-of-multiples",
     "strain",
     "point-mutations",
+    "space-age",
     "anagram",
     "nucleotide-count",
     "phone-number",
