Implements grains problem.

--- a/config.json
+++ b/config.json
@@ -12,6 +12,7 @@
     "strain",
     "point-mutations",
     "space-age",
+    "grains",
     "anagram",
     "nucleotide-count",
     "phone-number",
