--- a/config.json
+++ b/config.json
@@ -35,7 +35,8 @@
     "trinary",
     "largest-series-product",
     "meetup",
-    "parallel-letter-frequency"
+    "parallel-letter-frequency",
+    "triangle"
   ],
   "deprecated": [
 
