Add scrabble-score exercise
Tests are mostly a transcription of the tests on the xruby track

--- a/config.json
+++ b/config.json
@@ -36,7 +36,8 @@
     "largest-series-product",
     "meetup",
     "parallel-letter-frequency",
-    "triangle"
+    "triangle",
+    "scrabble-score"  
   ],
   "deprecated": [
 
