--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "bob",
     "sum-of-multiples",
     "strain",
-    "point-mutations",
+    "hamming",
     "space-age",
     "grains",
     "anagram",
