[anagram] cleaning rebar.config

--- a/exercises/anagram/rebar.config
+++ b/exercises/anagram/rebar.config
@@ -1,10 +1,7 @@
 %% -*- mode: erlang -*-
 
 %% Erlang compiler options
-{erl_opts, [debug_info,
-	    {i, "include"}]}.
-
-{src_dirs, ["src"]}.
+{erl_opts, [debug_info]}.
 
 {deps, []}.
 
