Update erlang versions on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 ---
 language: erlang
 otp_release:
-- 17.4
+- 17.5
+- 18.3
+- 19.2
 install:
 - "./_test/bootstrap.sh"
 script:
 - bin/fetch-configlet
 - bin/configlet .
-- "./_test/check-exercises.escript"
+- make test # "./_test/check-exercises.escript"
 cache:
 - apt
 sudo: false
