cache custom bins

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,8 @@ script:
 - bin/configlet .
 - make test # "./_test/check-exercises.escript"
 cache:
-- apt
+  - apt
+  - directories:
+    - $HOME/bin
+
 sudo: false
