--- a/exercises/anagram/rebar.config
+++ b/exercises/anagram/rebar.config
@@ -18,9 +18,9 @@
 ]}.
 
 %% eunit:test(Tests)
-% {eunit_tests, [{application, accumulate}]}.
+{eunit_tests, []}.
 %% Options for eunit:test(Tests, Opts)
-{eunit_opts, []}.
+{eunit_opts, [verbose]}.
 
 %% == xref ==
 
