--- a/exercises/atbash-cipher/rebar.config
+++ b/exercises/atbash-cipher/rebar.config
@@ -16,7 +16,7 @@
 ]}.
 
 %% eunit:test(Tests)
-{eunit_tests, [{application, atbash-cipher}]}.
+{eunit_tests, []}.
 %% Options for eunit:test(Tests, Opts)
 {eunit_opts, [verbose]}.
 
