[all-your-base] add to config.json

--- a/config.json
+++ b/config.json
@@ -130,6 +130,11 @@
       "difficulty": 4
     },
     {
+      "slug": "all-your-base",
+      "topics": [],
+      "difficulty": 4
+    },
+    {
       "slug": "series",
       "topics": [],
       "difficulty": 4
