--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - "./_test/bootstrap.sh"
 script:
 - configlet .
-- "./_test/check-exercises.escript"
+# - "./_test/check-exercises.escript"
 - "./bin/journey-test.sh"
 cache:
   - apt
