--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ otp_release:
 - 19.2
 install:
 - "./_test/bootstrap.sh"
+- rvm install 2.2.5
+- rvm use 2.2.5
 script:
 - configlet .
-- "./_test/check-exercises.escript"
+# - "./_test/check-exercises.escript"
+- "./bin/journey-test.sh"
 cache:
   - apt
+  - cache bundler
   - directories:
     - $HOME/bin
 
