rotational-cipher: disable proper

--- a/exercises/rotational-cipher/rebar.config
+++ b/exercises/rotational-cipher/rebar.config
@@ -1,12 +1,12 @@
 %% Erlang compiler options
 {erl_opts, [debug_info]}.
 
-{plugins, [rebar3_proper, rebar_alias]}.
-{deps, [{proper, "1.1.1-beta"}]}.
+% {plugins, [rebar3_proper, rebar_alias]}.
+%{deps, [{proper, "1.1.1-beta"}]}.
 
-{alias, [
-  {test, [eunit, proper]}
-]}.
+%{alias, [
+%  {test, [eunit, proper]}
+%]}.
 
 {dialyzer, [
   {warnings, [underspecs, no_return]},
