--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "slug": "erlang",
   "language": "Erlang",
-  "repository": "https://github.com/exercism/xerlang",
+  "repository": "https://github.com/exercism/erlang",
   "active": true,
   "exercises": [
     {
@@ -27,7 +27,7 @@
     },
     {
       "slug": "collatz-conjecture",
-      "topics":[
+      "topics": [
 
       ],
       "difficulty": 1
