Call configlet subcommand on CI
This changes configlet to pass a subcommand.

For now, we've released a version of configlet which handles both the old command:

    configlet path/to/track

as well as the new command:

    configlet lint path/to/track

This will let us update all the travis files to include the subcommand before we
release the version of configlet that requires the subcommand.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - rvm install 2.2.5
 - rvm use 2.2.5
 script:
-- configlet .
+- configlet lint .
 # - "./_test/check-exercises.escript"
 - "./bin/journey-test.sh"
 cache:
