Normalize the config file to minimize noise later
We will be scripting a number of changes to the track configuration.
This runs configlet fmt, which ensures that any further changes can be minimized.

--- a/config.json
+++ b/config.json
@@ -1,411 +1,331 @@
 {
-  "language": "Erlang",
   "active": true,
   "exercises": [
     {
-      "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a93",
+      "core": false,
+      "difficulty": 1,
       "slug": "hello-world",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 1,
-      "topics": [
-
-      ]
+      "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a93"
     },
     {
-      "uuid": "241eb25c-925b-4395-876c-c1dfe84e1c85",
+      "core": false,
+      "difficulty": 1,
       "slug": "leap",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 1,
-      "topics": [
-
-      ]
+      "uuid": "241eb25c-925b-4395-876c-c1dfe84e1c85"
     },
     {
-      "uuid": "a21065ca-6aad-46b2-ada0-6a62abfcea2b",
+      "core": false,
+      "difficulty": 1,
       "slug": "accumulate",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 1,
-      "topics": [
-
-      ]
+      "uuid": "a21065ca-6aad-46b2-ada0-6a62abfcea2b"
     },
     {
-      "uuid": "63c77b77-5a02-40ce-b5f6-372a5b3ae13d",
+      "core": false,
+      "difficulty": 1,
       "slug": "collatz-conjecture",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 1,
-      "topics": [
-
-      ]
+      "uuid": "63c77b77-5a02-40ce-b5f6-372a5b3ae13d"
     },
     {
-      "uuid": "8e9a98b1-bf4f-4c94-a258-a8618cc37f55",
+      "core": false,
+      "difficulty": 2,
       "slug": "rna-transcription",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "8e9a98b1-bf4f-4c94-a258-a8618cc37f55"
     },
     {
-      "uuid": "fced3620-26f2-4439-822c-27e1d59e24e1",
+      "core": false,
+      "difficulty": 2,
       "slug": "bob",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "fced3620-26f2-4439-822c-27e1d59e24e1"
     },
     {
-      "uuid": "c10bfbab-0b58-4fcb-aadc-304bd4b73cfc",
+      "core": false,
+      "difficulty": 2,
       "slug": "strain",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "c10bfbab-0b58-4fcb-aadc-304bd4b73cfc"
     },
     {
-      "uuid": "8b7390fc-da44-4f02-ad17-a7eb5c19cf2b",
+      "core": false,
+      "difficulty": 2,
       "slug": "hamming",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "8b7390fc-da44-4f02-ad17-a7eb5c19cf2b"
     },
     {
-      "uuid": "f276e064-a6d4-4a50-b53b-f36c1b30c62f",
+      "core": false,
+      "difficulty": 2,
       "slug": "space-age",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "f276e064-a6d4-4a50-b53b-f36c1b30c62f"
     },
     {
-      "uuid": "c3070adc-d434-4989-8d6b-d9e483e32d1c",
+      "core": false,
+      "difficulty": 2,
       "slug": "grains",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "c3070adc-d434-4989-8d6b-d9e483e32d1c"
     },
     {
-      "uuid": "d3cbfc9a-a495-4bf2-87d0-811d5f71fda6",
+      "core": false,
+      "difficulty": 2,
       "slug": "nucleotide-count",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "d3cbfc9a-a495-4bf2-87d0-811d5f71fda6"
     },
     {
-      "uuid": "ab852e36-3968-403f-93f5-53c7ecafa4c8",
+      "core": false,
+      "difficulty": 2,
       "slug": "difference-of-squares",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "ab852e36-3968-403f-93f5-53c7ecafa4c8"
     },
     {
-      "uuid": "2972e0de-b5ca-4fdd-9dbf-648937763394",
+      "core": false,
+      "difficulty": 2,
       "slug": "triangle",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 2,
-      "topics": [
-
-      ]
+      "uuid": "2972e0de-b5ca-4fdd-9dbf-648937763394"
     },
     {
-      "uuid": "5af1c90a-f98d-4682-885b-9770c9223194",
+      "core": false,
+      "difficulty": 3,
       "slug": "sum-of-multiples",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 3,
-      "topics": [
-
-      ]
+      "uuid": "5af1c90a-f98d-4682-885b-9770c9223194"
     },
     {
-      "uuid": "8f0570ae-223f-4da4-8b84-268b797b28ad",
+      "core": false,
+      "difficulty": 3,
       "slug": "anagram",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 3,
-      "topics": [
-
-      ]
+      "uuid": "8f0570ae-223f-4da4-8b84-268b797b28ad"
     },
     {
-      "uuid": "d8e38780-d04e-43fc-8606-97dc71e4974b",
+      "core": false,
+      "difficulty": 3,
       "slug": "atbash-cipher",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 3,
-      "topics": [
-
-      ]
+      "uuid": "d8e38780-d04e-43fc-8606-97dc71e4974b"
     },
     {
-      "uuid": "668f3947-3142-485e-89f8-e0e5060be29d",
+      "core": false,
+      "difficulty": 3,
       "slug": "phone-number",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 3,
-      "topics": [
-
-      ]
+      "uuid": "668f3947-3142-485e-89f8-e0e5060be29d"
     },
     {
-      "uuid": "24ae9a43-4e1c-418b-97f6-2c83dbc0e14a",
+      "core": false,
+      "difficulty": 3,
       "slug": "gigasecond",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 3,
-      "topics": [
-
-      ]
+      "uuid": "24ae9a43-4e1c-418b-97f6-2c83dbc0e14a"
     },
     {
-      "uuid": "4f5045d5-9ae1-4bdb-ac0b-a5d279a60ed8",
+      "core": false,
+      "difficulty": 3,
       "slug": "scrabble-score",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 3,
-      "topics": [
-
-      ]
+      "uuid": "4f5045d5-9ae1-4bdb-ac0b-a5d279a60ed8"
     },
     {
-      "uuid": "1a8abaa2-04f5-0e80-7986-5fb33995971caeb1496",
+      "core": false,
+      "difficulty": 3,
       "slug": "two-fer",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 3,
-      "topics": [
-
-      ]
+      "uuid": "1a8abaa2-04f5-0e80-7986-5fb33995971caeb1496"
     },
     {
-      "uuid": "a2d4ca29-54e2-4969-bfc9-ee483acf9caf",
+      "core": false,
+      "difficulty": 4,
       "slug": "robot-simulator",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "a2d4ca29-54e2-4969-bfc9-ee483acf9caf"
     },
     {
-      "uuid": "67bbcc69-31b7-41f2-a8e1-5a07d30e00d6",
+      "core": false,
+      "difficulty": 4,
       "slug": "grade-school",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "67bbcc69-31b7-41f2-a8e1-5a07d30e00d6"
     },
     {
-      "uuid": "43df8921-f0c3-4a0c-9bdf-eb89405049ad",
+      "core": false,
+      "difficulty": 4,
       "slug": "word-count",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "43df8921-f0c3-4a0c-9bdf-eb89405049ad"
     },
     {
-      "uuid": "df90c039-8629-497a-a809-5ba2d1f8d52f",
+      "core": false,
+      "difficulty": 4,
       "slug": "clock",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "df90c039-8629-497a-a809-5ba2d1f8d52f"
     },
     {
-      "uuid": "51af2614-e349-4e90-b917-177a6017e786",
+      "core": false,
+      "difficulty": 4,
       "slug": "allergies",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "51af2614-e349-4e90-b917-177a6017e786"
     },
     {
-      "uuid": "85e23906-6fd8-486a-add8-a6c932cef7e3",
+      "core": false,
+      "difficulty": 4,
       "slug": "all-your-base",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "85e23906-6fd8-486a-add8-a6c932cef7e3"
     },
     {
-      "uuid": "9ca527d7-5065-4856-8c95-07deb664da7e",
+      "core": false,
+      "difficulty": 4,
       "slug": "series",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "9ca527d7-5065-4856-8c95-07deb664da7e"
     },
     {
-      "uuid": "be69c23b-7559-44fe-9e21-94a865199de7",
+      "core": false,
+      "difficulty": 4,
       "slug": "parallel-letter-frequency",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "be69c23b-7559-44fe-9e21-94a865199de7"
     },
     {
-      "uuid": "d8ee01b3-307e-4835-a7cd-331e771111ae",
+      "core": false,
+      "difficulty": 4,
       "slug": "roman-numerals",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "d8ee01b3-307e-4835-a7cd-331e771111ae"
     },
     {
-      "uuid": "28b7e4fa-0511-f480-5128-5531913fca21458a2d9",
+      "core": false,
+      "difficulty": 4,
       "slug": "sieve",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 4,
-      "topics": [
-
-      ]
+      "uuid": "28b7e4fa-0511-f480-5128-5531913fca21458a2d9"
     },
     {
-      "uuid": "b312ff0e-90e3-4dd8-99dc-df4a9deb1907",
+      "core": false,
+      "difficulty": 5,
       "slug": "largest-series-product",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 5,
-      "topics": [
-
-      ]
+      "uuid": "b312ff0e-90e3-4dd8-99dc-df4a9deb1907"
     },
     {
-      "uuid": "8ad0c97b-189d-46ac-bb72-2c72f1fe4728",
+      "core": false,
+      "difficulty": 5,
       "slug": "rotational-cipher",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 5,
-      "topics": [
-
-      ]
+      "uuid": "8ad0c97b-189d-46ac-bb72-2c72f1fe4728"
     },
     {
-      "uuid": "60fc4ea6-28b0-4914-bcc3-a0caefca3cb5",
+      "core": false,
+      "difficulty": 6,
       "slug": "etl",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 6,
-      "topics": [
-
-      ]
+      "uuid": "60fc4ea6-28b0-4914-bcc3-a0caefca3cb5"
     },
     {
-      "uuid": "a7e2e89c-c599-4e30-a944-a9d4a98f2b94",
+      "core": false,
+      "difficulty": 6,
       "slug": "bank-account",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 6,
-      "topics": [
-
-      ]
+      "uuid": "a7e2e89c-c599-4e30-a944-a9d4a98f2b94"
     },
     {
-      "uuid": "e938c3e6-0b0f-498e-a3ec-47251f5bb55c",
+      "core": false,
+      "difficulty": 6,
       "slug": "luhn",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 6,
-      "topics": [
-
-      ]
+      "uuid": "e938c3e6-0b0f-498e-a3ec-47251f5bb55c"
     },
     {
-      "uuid": "249d0c9f-dadc-4168-ba9b-0c6bfe83618d",
+      "core": false,
+      "difficulty": 6,
       "slug": "meetup",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 6,
-      "topics": [
-
-      ]
+      "uuid": "249d0c9f-dadc-4168-ba9b-0c6bfe83618d"
     },
     {
-      "uuid": "058b48a9-03ec-43bc-88eb-9dbce8b79e59",
+      "core": false,
+      "difficulty": 7,
       "slug": "circular-buffer",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 7,
-      "topics": [
-
-      ]
+      "uuid": "058b48a9-03ec-43bc-88eb-9dbce8b79e59"
     },
     {
-      "uuid": "2fedc6bf-6006-4c2d-bba7-9c66265b6f62",
+      "core": false,
+      "difficulty": 7,
       "slug": "beer-song",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 7,
-      "topics": [
-
-      ]
+      "uuid": "2fedc6bf-6006-4c2d-bba7-9c66265b6f62"
     },
     {
-      "uuid": "b6c242d3-40d5-484d-8466-1a32d2332288",
+      "core": false,
+      "difficulty": 8,
       "slug": "zipper",
-      "core": false,
+      "topics": null,
       "unlocked_by": null,
-      "difficulty": 8,
-      "topics": [
-
-      ]
+      "uuid": "b6c242d3-40d5-484d-8466-1a32d2332288"
     },
     {
-      "uuid": "625ad6f2-c9e8-4129-a290-057209f941c5",
-      "slug": "spiral-matrix",
       "core": false,
-      "unlocked_by": null,
       "difficulty": 8,
-      "topics": [
-
-      ]
+      "slug": "spiral-matrix",
+      "topics": null,
+      "unlocked_by": null,
+      "uuid": "625ad6f2-c9e8-4129-a290-057209f941c5"
     }
   ],
   "foregone": [
     "binary-search",
     "lens-person",
     "linked-list"
-  ]
+  ],
+  "language": "Erlang"
 }
