--- a/exercises/anagram/rebar.config
+++ b/exercises/anagram/rebar.config
@@ -1,9 +1,7 @@
-%% -*- mode: erlang -*-
-
 %% Erlang compiler options
 {erl_opts, [debug_info]}.
 
-{deps, []}.
+{deps, [{erl_exercism, "0.1.1"}]}.
 
 {dialyzer, [
   {warnings, [underspecs, no_return]},
