--- a/exercises/rotational-cipher/rebar.config
+++ b/exercises/rotational-cipher/rebar.config
@@ -1,12 +1,7 @@
 %% Erlang compiler options
 {erl_opts, [debug_info]}.
 
-% {plugins, [rebar3_proper, rebar_alias]}.
-%{deps, [{proper, "1.1.1-beta"}]}.
-
-%{alias, [
-%  {test, [eunit, proper]}
-%]}.
+{deps, [{erl_exercism, "0.1.1"}]}.
 
 {dialyzer, [
   {warnings, [underspecs, no_return]},
@@ -24,8 +19,6 @@
 {eunit_tests, []}.
 %% Options for eunit:test(Tests, Opts)
 {eunit_opts, [verbose]}.
-
-{proper_opts, [{module, [rotational_cipher_tests]}]}.
 
 %% == xref ==
 
