Add back deleted, deprecated exercises
When migrating the data from v1 to v2, we will lose all the solutions submitted to
deprecated exercises, unless they exist in the track configuration.

This adds the deprecated binary and trinary exercises back, leaving them
 deprecated so that they don't actively show up as part of the track.

We can delete them from the track again after we launch v2, if we want to.

--- a/config.json
+++ b/config.json
@@ -451,6 +451,16 @@
       "topics": [
 
       ]
+    },
+    {
+      "uuid": "3cfc8f3f-c2ba-43f6-a4d7-2e276b9b9966",
+      "slug": "binary",
+      "deprecated": true
+    },
+    {
+      "uuid": "70385285-85bc-4345-9fe5-cb2ec1134b74",
+      "slug": "trinary",
+      "deprecated": true
     }
   ],
   "foregone": [
